2024-02-15T16:18:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7918984052 # 119
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-15
* notice: last 14d: unq all: 15 70
* notice: prev accum: outdated-unq outdated-all / unq all: 566 3009 / 581 3076
* notice: next accum: outdated-unq outdated-all / unq all: 566 3009 / 582 3079
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2024-02-15]

2024-02-14T08:18:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7898309328 # 115
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 14 67
* notice: prev accum: outdated-unq outdated-all / unq all: 566 3009 / 580 3074
* notice: next accum: outdated-unq outdated-all / unq all: 566 3009 / 581 3076
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-14]

2024-02-14T01:04:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7894965742 # 114
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 13 65
* notice: prev accum: outdated-unq outdated-all / unq all: 565 3006 / 579 3071
* notice: next accum: outdated-unq outdated-all / unq all: 566 3009 / 580 3074
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2024-01-30] / [2024-02-13]

2024-02-13T01:04:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7880200238 # 111