@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-15T16:18:17Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2024-02-16T01:03:54Z",
+  "count" : 5,
+  "count_minmax" : [ 3, 5 ],
+  "count_decinc" : [ -0, +5 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
