@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-15T16:18:17Z",
-  "count_outdated" : 3009,
-  "uniques_outdated" : 566,
-  "count" : 3079,
+  "timestamp" : "2024-02-16T01:03:54Z",
+  "count_outdated" : 3011,
+  "uniques_outdated" : 567,
+  "count" : 3081,
   "uniques" : 582,
   "views" : [
-    {
-      "timestamp": "2024-02-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 26,
@@ -88,9 +79,9 @@
     },
     {
       "timestamp": "2024-02-15T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 5,
+      "count_minmax": [ 3, 5 ],
+      "count_decinc": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
