@@ -1,12 +1,7 @@
 {
   "count": 70,
-  "uniques": 15,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2024-02-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 26,
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2024-02-15T00:00:00Z",
-      "count": 3,
+      "count": 5,
       "uniques": 1
     }
   ]
